Anpassung lasrest - repo

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express": "^4.13.4",
     "install": "^0.4.4",
     "jquery-pjax": "defunkt/jquery-pjax",
-    "lasrest": "grueny/lasrest",
+    "lasrest": "LVM-it/prototype-backend",
     "less": "^2.6.0",
     "less-plugin-clean-css": "^1.5.1",
     "less-plugin-npm-import": "^2.1.0",
